# ogvla_realworld

./: .env  .gitignore  README.md  block_manipulation.py  demo_client.py  demo_delta_ee_control.py  get_hand_joint_positions.py  pyproject.toml  replay.py  requirements.txt  reset.py  run_server.py  set_hand_joint_positions.py  setup.py  tmp.py
arm_hand_deployment/: consts.py  enums.py
arm_hand_deployment/config/: config.yaml
arm_hand_deployment/franka/: run_server.py
arm_hand_deployment/franka_allegro/: run_server.py
arm_hand_deployment/interfaces/: client.py
arm_hand_deployment/utils/: client_context.py  grav_vec_trans.py  np_3d_utils.py
config/: config.yaml  deoxys_config.yaml
data/: data_0.npy  data_1.npy  data_2.npy  data_3.npy  data_4.npy  data_5.npy  data_6.npy  data_7.npy  data_8.npy
data/eval/: action  data_0.npy  data_1.npy  data_2.npy  data_3.npy  obs_input.pkl
data/eval_final/: action  obs_input.pkl
data/eval_final_1/: obs_input.pkl
data/eval_final_vpsalm/: action  obs_input.pkl
data/eval_openpi/: action  obs_input.pkl
data/eval_pvsalm/: action  obs_input.pkl
data/test/: calibration_front_mar13.launch  calibration_front_mar24.launch  calibration_left_mar13.launch  ee_pose  samples_front.yaml  samples_left.yaml
docs/: franka.md  franka_allegro.md
examples/franka/: collect_demos copy.py  collect_demos.py  collect_demos_openpi.py  demo_client.py  demo_delta_ee_control.py  demo_delta_ee_control_with_perception.py  demo_get_info.py  demo_joint_position_control.py  load_data.py  run_eval.py  (+1 more)
scripts/: generate_proto.sh
(+23 files in other folders)
