[project]
name = "arm_hand_deployment"
version = "0.1.0"

authors = [{ name = "Sicheng He", email = "sichengh@usc.edu" }]

description = "arm_hand_deployment"

readme = "README.md"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

license = { file = "LICENSE" }

requires-python = ">=3.8"

# TODO: Add dependencies here
